<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">酷银</string>
   	<string name="user_name"></string>
   	<string name="select_user">选择用户</string>
    <string name="user_login_in">用户登录</string>
    <string name="apply_for">商户申请</string>
    <string name="help_center">帮助中心</string>
    <string name="login_in">登  录</string>
    <string name="resent_sale">销售记录</string>
    <string name="admin_setting">控制面板</string>
    <string name="user_hint">用户名</string>
    <string name="pass_hint">密码</string>
    <string name="info_input_cash">现金支付</string>
    <string name="info_input_card">刷卡支付</string>
    <string name="settlement">结算</string>
    <string name="sign_delete">清除</string>
    <string name="sign_ok">确认</string>
    <string name="input_pass">输入密码</string>
    <string name="sign_cancel">重新签名</string>
    <string name="sign_confirm">确认签名</string>
    <string name="sign_alert_info">在支付之前，需要顾客亲自签字确认。如出现法律纠纷应以此为据</string>
    <string name="sent_trade_info">发送订单信息</string>
    <string name="send_info">发送</string>
    <string name="during_send_info">发送中</string>
    <string name="send_info_success">成功</string>
    <string name="send_info_fail">失败</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_email_address">请输入邮箱地址</string>
    <string name="print_receipt">打印收据</string>
    <string name="discountname">所有优惠类</string>
    <string name="allname">所有商品</string>
    <string name="accounts">结算</string>
    <string name="hangup">挂单</string>
    <string name="product_list">商品列表</string>
    <string name="manual_input">手动输入</string>
    <string name="canceldiscount">取消商品</string>
    <string name="shopping_car">购物车</string>
    <string name="clear_shopping_car">清空购物车</string>
    <string name="privilege">优惠</string>
    <string name="send_orderinfo">发送数据</string>
    <string name="revocation_order">撤销订单</string>
    <string name="recover_order">恢复挂单</string>
    <string name="order_detail">订单详情</string>
    <string name="lookup_bills">查看单据</string>
    <string name="imageviewtext"></string>
    <string name="control_panel">控制面板</string>
    <string name="pause_deal">挂单</string>
    <string name="not_sync">未同步</string>
    <string name="last_record">近期销售</string>
    <string name="all_record">全部记录</string>
    <string name="username">用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="click_unlock">点击解锁</string>
     <string name="rec_merchantname">商户名称：</string>
    <string name="rec_merchantid">商户编号：</string>
    <string name="rec_terminal">终端编号：</string>
    <string name="rec_opmanno">操作员：</string>
    <string name="rec_issuer">发卡行号：</string>
    <string name="rec_cardnum">卡号：</string>
    <string name="rec_cardexpration">卡有效期：</string>
    <string name="rec_cardlinenum">收单行号：</string>
    <string name="rec_tradetype">交易类型：</string>
    <string name="rec_tradebatchnum">批次号：</string>
    <string name="rec_tradeinquire">交易查询号：</string>
    <string name="rec_tradetime">交易时间：</string>
    <string name="rec_certificatenum">凭证号：</string>
    <string name="rec_autho">授权码：</string>
    <string name="rec_reference">参考号：</string>
    <string name="rec_date">日期</string>
    <string name="rec_time">时间</string>
    <string name="rec_amount">金额</string>
    <string name="tenant_name">xxxxxxxxx</string>
    <string name="tenant_no">xxxxxxxxxxxxx</string>
    <string name="trade_type">xxxxxx</string>
    <string name="trade_inqurenum">xxxxxxxxx</string>
    <string name="clean_up_shopping_cart_positive">确 认</string>
    <string name="clean_up_cancel_button">取 消 </string>
    <string name="clean_up_all_shopcart">清空购物车</string>
    <string name="goodskind">商品分类</string>
    <string name="goodsattr">商品属性</string>
    <string name="goodsonsale">商品优惠</string>
    <string name="goodsmanager">"  商品管理"</string>
    <string name="usermanager">"  用户管理"</string>
    <string name="updateapk">程序更新</string>
    <string name="settoperation">"&#160;&#160;设&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置&#160;&#160;"</string>
    <string name="select_date_and_time">请选择日期和时间</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="product_name">商品名称</string>
    <string name="sale_number">销售数量</string>
    <string name="shop_manager">店长</string>
    <string name="shop_assistant">店员</string>
    <string name="notpay">未支付</string>
    <string name="alreadyrepeal">已撤销</string>
    <string name="nocate">无分类</string>
    <string name="refund">冲正</string>
    <string name="refund_fail">冲正失败</string>
    <string name="refund_success">冲正成功</string>
    <string name="cancle_hangup">取消挂单</string>
    <string name="not_confirm">确定中……</string>
    <string name="alert_addcate_fail">添加或修改商品种类失败</string>
    <string name="alert_addcate_success">添加或修改商品种类成功</string>
    <string name="alert_addcate_notnull">添加商品种类名称不能为空</string>
    <string name="alert_addonsale_fail">添加或修改商品优惠失败。</string>
    <string name="alert_addonsale_success">添加或修改商品优惠成功。</string>
    <string name="alert_addonsale_wrong">优惠幅度格式错误。</string>
    <string name="alert_addonsale_notnull">商品优惠不能为空。</string>
    <string name="alert_addgoods_fail">添加或修改商品失败.</string>
    <string name="alert_addgoods_success">添加或修改商品成功.</string>
    <string name="alert_addgoods_notnull">商品名和价格不能为空。</string>
    <string name="alert_adduser_success">添加或修改用户成功</string>
    <string name="alert_adduser_fail">添加或修改用户失败</string>
    <string name="alert_adduser_namenotnull">姓名不能为空。</string>
    <string name="alert_adduser_accounteleven">用户名为11位手机号码。</string>
    <string name="alert_addattr_fail">添加或修改商品属性失败。</string>
    <string name="alert_addattr_success">添加或修改商品属性成功。</string>
    <string name="alert_addattr_notnull">商品属性名不能为空。</string>
    <string name="alert_addattr_toomany">添加的子属性过多。</string>
    <string name="alert_addattr_alreadyin">子属性名重复，添加失败！</string>
    <string name="receive_cash">收款</string>
    <string name="change_cash">找零</string>
    <string name="card_success">刷卡支付成功</string>
   	<string name="yuan">元</string>
   	<string name="period">。</string>
   	<string name="consume_cash">现金消费</string>
   	<string name="consume_other">其他消费</string>
   	<string name="consume_card">刷卡消费</string>
   	<string name="consume_total">销售总额</string>
   	<string name="consume_count">交易数量</string>
   	<string name="deal_Hangup_first">请先处理当前挂单</string>
   	<string name="attr_factor">属性因子</string>
   	<string name="price_factor">价格因子</string>
   	<string name="save_attr">保存修改/保存新建</string>
   	<string name="save_attr_dialog">确 定</string>
   	<string name="sales_statistics">销售统计</string>
   	<string name="order_remark">订单备注信息</string>
   	<string name="input_order_remark">请输入订单备注信息</string>
   	<string name="new_deal">新购物</string>
	<string name="delete">删除</string>
	<string name="big">大</string>
	<string name="save_onsale">保存修改/保存新建</string>
	<string name="input_name">请输入名称</string>
	<string name="input_price">请输入价格</string>
	<string name="onsale_name">优惠名称</string>
	<string name="input_price_float">请输入价格幅度</string>
	<string name="price_float">价格幅度</string>
	<string name="delete_onsale">删除此优惠</string>
	<string name="delete_cate">删除此分类</string>
	<string name="cate_name">分类名称</string>
	<string name="name">名称</string>
	<string name="price">价格</string>
	<string name="cate">分类</string>
	<string name="add_product_attr">添加商品属性</string>
	<string name="delete_product">删除此商品</string>
	<string name="attr_name">属性名称</string>
	<string name="input_attr_name">请输入属性名字</string>
	<string name="single_select">单选</string>
	<string name="multy_select">多选</string>
	<string name="add_price_attr">添加</string>
	<string name="price_attr">属性因子</string>
	<string name="delete_attr">删除此属性</string>
	<string name="save_cate">保存修改/保存新建</string>
	<string name="save_product">保存修改/保存新建</string>
	<string name="set_pic">设置图片</string>
	<string name="back">&#160;&#160;返&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;回</string>
	<string name="order_cancle_alert">该订单将要撤销，需返还顾客 </string>
	<string name="order_cancle_success">订单撤销成功</string>
	<string name="check_update">软件更新</string>
	<string name="current_day">本日</string>
	<string name="current_week">本周</string>
	<string name="current_month">本月</string>
	<string name="begin_time">开始日期</string>
	<string name="end_time">结束日期</string>
	<string name="change_account">更换账号</string>
	<string name="lock_account">锁定</string>
	<string name="delete_account">删除此用户</string>
	<string name="property_set">权限设置</string>
	<string name="acount_name">姓名</string>
	<string name="acount_identity">证件号</string>
	<string name="input_account_name">请输入姓名</string>
	<string name="input_identity_name">请输入证件号</string>
	<string name="input_phoneno">请输入11位手机号</string>
	<string name="save_account">保存修改/新建用户</string>
    <string name="user_name_hint">姓名</string>
    <string name="user_phone_hint">请输入手机号码</string>
    <string name="submit">提交</string>
    <string name="band">绑定</string>
    <string name="input_active_number_hint">输入验证码</string>
    <string name="password_hint">请输入密码</string>
    <string name="ensure_password_hint">请确认密码</string>
    <string name="is_loading">正在处理，请稍等&#8230;</string>
    <string name="active_device">激活设备</string>
    <string name="get_active_number">获得验证码</string>
    <string name="active_number_hint">请输入验证码</string>
    <string name="select_merchant">请选择商户</string>
    <string name="select_tid">请选择机器</string>
    <string name="merchant_name">商户名称</string>
    <string name="merchant_id">编号</string>
    <string name="terminal_name">终端编号</string>
    <string name="serial_number">已绑定收银机编号</string>
    <string name="download_secret_key">下载设备参数</string>
    <string name="forget_password">忘记密码</string>
    <string name="administrator">管理员</string>
    <string name="phone_and_name_null">手机号和姓名都不能为空</string>
    <string name="error_phone_type">手机号码格式错误，请检查后重试！</string>
    <string name="network_error">网络异常，请检查网络后重试！</string>
    <string name="hint">提示</string>
    <string name="active_number_null">请检查验证码是否正确！</string>
    <string name="regain_active_number_hint"><xliff:g id="NUMBER">%1$2s</xliff:g>秒后重新获取</string>
    <string name="regain_active_number">重新获得验证码</string>
    <string name="psw_different">两次输入的密码不一样</string>
    <string name="mid_is_null">您还没有注册商家信息，暂时无法激活设备，您可以在完成注册信息后重新激活。</string>
    <string name="order_reverse_alert">消费冲正处理，如已扣款会被抹账</string>
    <string name="refund_reverse_alert">撤销冲正处理，会取消撤销操作</string>
    <string name="order_reverse_inprocess">冲正进行中，请勿离开界面</string>
    <string name="reverse_success">冲正处理成功</string>
    <string name="reverse_salevoid_success">撤销冲正处理成功，请10分钟后再次撤单</string>
    <string name="not_complete">未完成</string>
    <string name="change_recover">重新交易</string>
    <string name="tid_is_null">您还没有添加终端信息，暂时无法激活设备，您可以在完成注册信息后重新激活。</string>
    <string name="band_tid_hint">即将绑定该设备到终端<xliff:g id="NUMBER">%1$2s</xliff:g>上，您确定绑定？</string>
    <string name="change_band_tid_hint">即将覆盖终端<xliff:g id="NUMBER">%1$2s</xliff:g>上的设备，覆盖后原设备将不能使用，您确定覆盖？</string>
    <string name="band_device_ok">绑定设备成功！</string>
    <string name="change_band_ok">修改绑定设备成功！</string>
    <string name="change_password">修改密码</string>
    <string name="get_active_number_first">请先获取验证码</string>
    <string name="phone_number">用户名</string>
    <string name="need_reverse">需冲正</string>
    <string name="check_emv">是否为IC卡</string>
    <string name="hava_emv">是</string>
    <string name="nothave_emv">否</string>
    <string name="login_in_error">登录失败</string>
    <string name="is_editing_phone_hint">您正在修改手机号码，是否放弃此次修改？</string>
    <string name="change_phone">修改手机号码</string>
    <string name="original_phone">原手机号</string>
    <string name="new_phone">新手机号</string>
    <string name="check_account">账户验证</string>
    <string name="phone_psw_error">手机号或密码输入错误，请检查后重试</string>
    <string name="re_login_for_active">您确定退出此账号，重新激活该设备？</string>
	<string name="onsale_money">¥</string>
	<string name="onsale_percent">%</string>
</resources>